--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -1,4 +1,6 @@
-<h3>{{t "session.newuser.title"}}!</h3>
+<div class="container">
+  <h3>{{t "session.newuser.title"}}!</h3>
 
-<h4>{{t "select_team"}}</h4>
-<img src="/ember/assets/images/cryptopussy_without_text.svg" alt="logo">
+  <h4>{{t "select_team"}}</h4>
+  <img src="/ember/assets/images/cryptopussy_without_text.svg" alt="logo">
+</div>
