--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -1,36 +1,33 @@
 {{#if this.isFolderEditing}}
   <FolderForm @folder={{@folder}} @onAbort={{this.toggleFolderEdit}} @title={{t "folders.edit.title"}}/>
 {{/if}}
-<div class="mb-2" >
-  <div class="folder-divider d-flex flex-row justify-content-between">
-    <div class="col" role="button" {{on "click" this.collapse}}>
-      <h2 class="folder-header d-inline">{{@folder.name}}</h2>
-    </div>
-    <div class="col-auto d-inline">
-      <a role="button" {{on "click" this.toggleFolderEdit}}>
-        <img class="icon-button folder-edit-icon" src="/ember/assets/images/edit.svg" alt="edit">
-      </a>
-      <span role="button" {{on "click" this.collapse}}>
-        {{#if this.collapsed}}
-          <img class="icon-big-button float-right" src="/ember/assets/images/angle-left.svg" alt="<">
-        {{else}}
-          <img class="icon-big-button float-right" src="/ember/assets/images/angle-down.svg" alt="v">
-        {{/if}}
-      </span>
-    </div>
+<div class="d-flex row justify-content-between">
+  <div class="col" role="button" {{on "click" this.collapse}}>
+    <h4 class="d-inline">{{@folder.name}}</h4>
+  </div>
+  <div class="col-auto d-inline">
+    <a role="button" {{on "click" this.toggleFolderEdit}}>
+      <img class="icon-button folder-edit-icon" src="/ember/assets/images/edit.svg" alt="edit">
+    </a>
+    <span role="button" {{on "click" this.collapse}}>
+      {{#if this.collapsed}}
+        <img class="icon-big-button float-right" src="/ember/assets/images/angle-left.svg" alt="<">
+      {{else}}
+        <img class="icon-big-button float-right" src="/ember/assets/images/angle-down.svg" alt="v">
+      {{/if}}
+    </span>
   </div>
 </div>
 <BsCollapse  @collapsed={{this.collapsed}}>
-  <div class="p-15px">
+  <div class="">
     <div class="row mb-2">
       <div class="col">
-        {{t "description"}}:
-        {{@folder.description}}
+        <p class="text-muted">{{@folder.description}}</p>
       </div>
     </div>
-    <div class="row">
+    <div class="d-flex flex-wrap">
       {{#each @folder.accounts as |account|}}
-        <div class="col-3">
+        <div class="p-3">
           <AccountCardShow @account={{account}}/>
         </div>
       {{/each}}
