--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -102,6 +102,48 @@ li a {
   height: 40px;
 }
 
+.ml-5 {
+  margin-left: 5%;
+}
+
+/* Validation-errors */
+.validation-errors {
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 90%;
+  font-weight: bold;
+  color: #dc3545;
+}
+
+.invalid-input-name > input {
+  border: 1px solid red !important;
+}
+
+.invalid-input > textarea {
+  border: 1px solid red !important;
+}
+
+.invalid-input-ps > div:nth-of-type(1) {
+  border: 1px solid red !important;
+}
+
+.mt-32 {
+  margin-top: 32px;
+}
+
+.ml-15 {
+  margin-left: 15px;
+}
+
+.ember-power-select-trigger {
+  height: 38px;
+  line-height: 2.1;
+}
+
+.vertical-resize {
+  resize: vertical;
+}
+
 .icon-big-button {
   width: 30px !important;
   height: 30px !important;
