--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -4,6 +4,9 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
 @import "ember-bootstrap/bootstrap";
 @import "pod-styles";
 /*@import "secret_input";*/
+
+@import "ember-power-select/themes/bootstrap";
+
 @import "ember-power-select";
 
 // @font-face {
