--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -2,6 +2,11 @@ $navbar-dark-brand-color: white;
 $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
 
 @import "ember-bootstrap/bootstrap";
+@import "pod-styles";
+/*@import "secret_input";*/
+
+@import "ember-power-select/themes/bootstrap";
+
 @import "ember-power-select";
 
 /*@import "secret_input";*/
