--- a/frontend/app/templates/components/folder-form.hbs
+++ b/frontend/app/templates/components/folder-form.hbs
@@ -9,11 +9,11 @@
           <div class="col-md-6">
             <div class="row">
               <form.group class="col-md-12">
-                <form.element @property="name" @label="{{t "folders.name"}}"
+                <form.element @property="name" @label={{t "folders.name"}}
                               @name="foldername" class={{if this.changeset.error.name.validation
                                                              "invalid-input-name"}}
                               id="foldername" @tabindex="1"
-                              @customError="{{this.changeset.error.name.validation}}"/>
+                              @customError={{this.changeset.error.name.validation}} />
               </form.group>
             </div>
           </div>
@@ -22,8 +22,8 @@
           <div class="col-md-5">
             <div class="row">
               <div class="form-group col-md-12" id="team-power-select">
-                <form.element @label="{{t "team"}}" @controlType="power-select"
-                              @placeholder="{{t "accounts.edit.team_placeholder"}}"
+                <form.element @label={{t "team"}} @controlType="power-select"
+                              @placeholder={{t "accounts.edit.team_placeholder"}}
                               @options={{this.assignableTeams}} @value={{this.selectedTeam}} as |el|>
                   <el.control class={{if this.changeset.error.team.validation "invalid-input-ps"}} @renderInPlace={{true}} @onChange={{this.setSelectedTeam}} as |team|>
                     {{team.name}}
@@ -34,12 +34,12 @@
           </div>
         </div>
         <div class="row">
-            <form.group class="col-md-12">
-              <form.element @label="{{t "description"}}" @property="description" @controlType="textarea"
-                            id="description" class="vertical-resize" class={{if
-                      this.changeset.error.description.validation "invalid-input"}}
+          <form.group class="col-md-12">
+            <form.element @label={{t "description"}} @property="description" @controlType="textarea"
+                            id="description" class="{{if
+                      this.changeset.error.description.validation "invalid-input"}} vertical-resize"
                             @tabindex="7" @customError={{this.changeset.error.description.validation}}/>
-            </form.group>
+          </form.group>
         </div>
       </BsForm>
     </div>
