--- a/frontend/app/templates/components/team-form.hbs
+++ b/frontend/app/templates/components/team-form.hbs
@@ -8,18 +8,18 @@
         <div class="row">
           <div class="col-md-12">
             <form.group>
-              <form.element @property="name" @label="{{t "helpers.label.team.name"}}"
+              <form.element @property="name" @label={{t "helpers.label.team.name"}}
                             @name="teamname" class={{if this.changeset.error.name.validation
                                                            "invalid-input-name"}}
                             id="teamname" @tabindex="1"
-                            @customError="{{this.changeset.error.name.validation}}"/>
+                            @customError={{this.changeset.error.name.validation}} />
             </form.group>
             <div class="checkbox">
               <label for="checkbox-private" name="private">{{t "teams.form.private"}}</label>
               <span data-toggle="private-info-tooltip" data-html="true" data-placement="top"
                     title="<b>{{t "teams.description.private"}}</b>">
-              <img src="/ember/assets/images/info.svg" alt="info" class="info-icon icon-button">
-            </span>
+                <img src="/ember/assets/images/info.svg" alt="info" class="info-icon icon-button">
+              </span>
               <Input id="checkbox-private" class="" @type="checkbox" @checked={{this.changeset.private}} @name="private"
                      disabled={{not this.isNewRecord }}/>
             </div>
@@ -28,9 +28,9 @@
           </div>
           <div class="col-md-12">
             <form.group>
-              <form.element @label="{{t "helpers.label.team.description"}}" @property="description" @controlType="textarea"
-                            id="description" class="vertical-resize" class={{if
-                      this.changeset.error.description.validation "invalid-input"}}
+              <form.element @label={{t "helpers.label.team.description"}} @property="description" @controlType="textarea"
+                            id="description" class="{{if
+                      this.changeset.error.description.validation "invalid-input"}} vertical-resize"
                             @tabindex="7" @customError={{this.changeset.error.description.validation}}/>
             </form.group>
           </div>
