--- a/frontend/app/templates/components/account-form.hbs
+++ b/frontend/app/templates/components/account-form.hbs
@@ -44,7 +44,7 @@
             <div class="col-sm-12">
               <form.element @label={{t "password"}} @name="cleartextPassword" id="cleartext-password"
                             class="secret mb-10"
-                            @property="cleartextPassword" @type="password" @name="cleartextPassword" @tabindex="3" autocomplete="off"/>
+                            @property="cleartextPassword" @type="password" @tabindex="3" autocomplete="off"/>
               <PasswordStrengthMeter class="col-9 pl-0" @password={{this.changeset.cleartextPassword}}/>
             </div>
           </div>
